--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <svg id="Layer_1" width="256" height="256" data-name="Layer 1" viewBox="0 0 256 256">
+  <svg id="bear" width="256" height="256" data-name="Layer 1" viewBox="0 0 256 256">
 
-    <g id="ear-1">
-      <circle id="L-ear" cx="43.9" cy="49.2" r="34.6" fill="#673200"/>
-      <circle id="L-ear-h" cx="46.4" cy="58" r="14.8" fill="#ffaaca"/>
+    <g id="left-ear">
+      <circle id="l-ear" cx="43.9" cy="49.2" r="34.6" fill="#673200"/>
+      <circle id="l-ear-h" cx="46.4" cy="58" r="14.8" fill="#ffaaca"/>
     </g>
-    <g id="ear-r">
-      <circle id="R-ear" cx="212.1" cy="49.2" r="34.6" fill="#673200"/>
-      <circle id="R-ear-h" cx="209.6" cy="58" r="14.8" fill="#ffaaca"/>
+    <g id="right-ear">
+      <circle id="r-ear" cx="212.1" cy="49.2" r="34.6" fill="#673200"/>
+      <circle id="r-ear-h" cx="209.6" cy="58" r="14.8" fill="#ffaaca"/>
     </g>
 
     <g id="face">
-      <circle id="face" cx="128" cy="133.2" r="108.1" fill="#673200"/>
-      <path id="R-face" fill="#c65b00" d="M174 35.4a65.6 65.6 0 0 0 61 113.3 108.2 108.2 0 0 0-61-113.3z"/>
+      <circle id="front" cx="128" cy="133.2" r="108.1" fill="#673200"/>
+      <path id="r-face" fill="#c65b00" d="M174 35.4a65.6 65.6 0 0 0 61 113.3 108.2 108.2 0 0 0-61-113.3z"/>
       <path id="l-face" fill="#c65b00" d="M19.9 133.2a109 109 0 0 0 1.1 15.4A65.6 65.6 0 0 0 82 35.4a108.1 108.1 0 0 0-62.1 97.8z"/>
     </g>
     <g id="mouth-all">
@@ -28,11 +28,10 @@
       <path id="smile" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M101.2 187.1a37.2 37.2 0 0 0 52.7 0"/>
     </g>
     <g id="eyes">
-      <circle id="L-eye" cx="84.8" cy="106.5" r="9.3"/>
-      <circle id="R-eye" cx="171.2" cy="106.5" r="9.3"/>
+      <circle id="left-eye" cx="84.8" cy="106.5" r="9.3"/>
+      <circle id="right-eye" cx="171.2" cy="106.5" r="9.3"/>
     </g>
-
-      <circle id="nose" cx="128" cy="138.1" r="13" fill="#ffaaca"/>
+    <circle id="nose" cx="128" cy="138.1" r="13" fill="#ffaaca"/>
 
   </svg>
 </body>
